--- a/package.json
+++ b/package.json
@@ -18,15 +18,19 @@
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.4",
+    "axios": "^0.21.1",
     "react": "17.0.1",
     "react-native": "0.64.0",
     "react-native-easy-grid": "^0.2.2",
     "react-native-flexbox-grid": "^0.3.2",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-paper": "^4.7.2",
+    "react-native-popup-menu": "^0.15.10",
+    "react-native-progress-dialog": "0.0.5",
     "react-native-reanimated": "^2.1.0",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.1.0",
+    "react-native-toast-message": "^1.4.9",
     "react-native-vector-icons": "^8.1.0"
   },
   "devDependencies": {
