--- a/android/build.gradle
+++ b/android/build.gradle
@@ -7,6 +7,10 @@ buildscript {
         compileSdkVersion = 29
         targetSdkVersion = 29
         ndkVersion = "20.1.5948944"
+        buildToolsVersion           = "28.0.3"
+        googlePlayServicesVersion   = "17.0.0"
+        supportLibVersion           = "27.1.0"
+        androidMapsUtilsVersion     = "0.5+"
     }
     repositories {
         google()
