--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.4",
     "axios": "^0.21.1",
-    "react": "17.0.1",
-    "react-native": "0.64.0",
+    "react": "17.0.2",
+    "react-native": "0.65.1",
     "react-native-easy-grid": "^0.2.2",
     "react-native-flexbox-grid": "^0.3.2",
     "react-native-geolocation-service": "^5.3.0-beta.1",
@@ -30,7 +30,7 @@
     "react-native-paper": "^4.7.2",
     "react-native-popup-menu": "^0.15.10",
     "react-native-progress-dialog": "0.0.5",
-    "react-native-reanimated": "^2.1.0",
+    "react-native-reanimated": "^2.3.0-alpha.2",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.1.0",
     "react-native-sqlite-storage": "^5.0.0",
@@ -38,14 +38,15 @@
     "react-native-vector-icons": "^8.1.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.13.15",
-    "@babel/runtime": "^7.13.10",
+    "@babel/core": "^7.12.9",
+    "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
     "babel-jest": "^26.6.3",
     "eslint": "^7.23.0",
     "jest": "^26.6.3",
-    "metro-react-native-babel-preset": "^0.65.2",
-    "react-test-renderer": "17.0.1"
+    "metro-react-native-babel-preset": "^0.66.0",
+    "react-native-codegen": "^0.0.7",
+    "react-test-renderer": "17.0.2"
   },
   "jest": {
     "preset": "react-native"
